2009-05-08 Alessandro Scalzo <alessandro@liralab.it>
	* src/libYARP_OS/include/yarp/os/Run.h
	* src/libYARP_dev/src/Run.cpp
	* scr/yarprun/

	Zombie mangement added, APIs.
	yarprun executable added.

2009-04-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: bugfix: when closing
	a port, and shutting down connections, deal correctly with
	disconnections that fail because the port on the other 
	side no longer exists.  

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: bugfix: when
	"success" flag of a read was clobbered (see below), the port 
	would fail to correctly move on to the next payload.

	* src/libYARP_OS/src/Port.cpp: bugfix: "success" flag of a 
	read could get clobbered by competing RPC calls.

2009-04-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: patch from Philipp Robbel to 
	fix swig wrapping for Port::write with two arguments.
	
2009-04-14 Alessandro Scalzo <alessandro@liralab.it>
	* src/libYARP_OS/include/yarp/os/Run.h
	* src/libYARP_OS/include/yarp/os/impl/Companion.h
	* src/libYARP_dev/src/Run.cpp
	* src/libYARP_dev/src/Companion.cp

	The new yarp run.

2009-03-18 Alessandro Scalzo <alessandro@liralab.it>
	* src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h
	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/TestFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.cpp

	Added support for new iCub/src/modules/dragonfly2 driver
	and iCub/src/gui/frameGrabberGui2 remote GUI.

2009-03-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: undo
	semaphore bypass committed on 2009-03-12.  It was decided that
	it is better not to work around this problem, but to address it
	face on.

2009-03-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: bypass
	ACE semaphores in Linux.
