@@ -1,3 +1,11 @@
+2009-05-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_sig/src/Matrix.cpp: fix for Matrix serialization,
+	thanks to Stephane Lallee for report that led to this.
+
+	* src/libYARP_sig/harness/MatrixTest.cpp: test for compatibility
+	of Matrix serialization and standard bottle format.
+
 2009-05-08 Alessandro Scalzo <alessandro@liralab.it>
 	* src/libYARP_OS/include/yarp/os/Run.h
 	* src/libYARP_dev/src/Run.cpp
